Add Terraform destroy step to workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,3 +33,6 @@ jobs:
 
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
+        
+      - name: Terraform destroy
+        run: terraform destroy -auto-approve tfplan
