--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,4 +35,4 @@ jobs:
         run: terraform apply -auto-approve tfplan
         
       - name: Terraform destroy
-        run: terraform destroy -auto-approve tfplan
+        run: terraform apply -destroy tfplan
